--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ ria = "ria.ria:main_entry_point"
 [project]
 name = "ria"
 version = "0.1.0"
-description = "A multi-agent supervisor framework"
+description = "knowledge-Rich Intelligent Agents (RIA) - A Multi-Agent AI System"
 requires-python = ">=3.12"
 dependencies = [
     "langchain_mcp_adapters",
